--- a/api/openapi/notification.yml
+++ b/api/openapi/notification.yml
@@ -16,7 +16,7 @@ paths:
   /notification/subscribe:
     post:
       summary: Subscribe to notification
-      operationId: subscribe
+      operationId: subscribeNotification
       requestBody:
         description: Register new Token to a server
         required: true
@@ -34,6 +34,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /notification/send:
+    post:
+      summary: Send notification to all subscriber
+      operationId: sendNotification
+      requestBody:
+        description: Register new Token to a server
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Message'
+      responses:
+        '200':
+          description: todo
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     NewSubscriber:
@@ -43,6 +64,17 @@ components:
         token:
           type: string
           description: Client Token
+    Message:
+      required:
+        - title
+        - message
+      properties:
+        title:
+          type: string
+          description: Notification title
+        message:
+          type: string
+          description: Notification message
     Error:
       type: object
       required:
