--- a/tools/c4/view.yml
+++ b/tools/c4/view.yml
@@ -14,6 +14,10 @@ view:
       background_color: 2d69b7ff
       font_color: ffffffff
       border_color: 000000ff
+    - id: DOMAIN
+      background_color: ffffffff
+      font_color: 000000ff
+      border_color: 000000ff
     - id: DB
       background_color: c8c8c8ff
       font_color: 000000ff
