--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,13 @@
 name: Test and coverage
 
-on: [push, pull_request]
+on:
+    push:
+        branches: [main]
+    pull_request:
+        types: [opened, synchronize]
 
 jobs:
-  build:
+  test:
     environment: test
     runs-on: ubuntu-latest
     steps:
