fix test coverage upload & adding badge

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,6 @@ jobs:
         CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
         API_KEY: ${{ secrets.API_KEY }}
       working-directory: ./internal
-      run: go test -race -coverprofile=../coverage.out -covermode=atomic
+      run: go test ./... -race -coverprofile=../coverage.out -covermode=atomic
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
