--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Retrieve the secret and decode it to a file
       run: |
-        echo -n "${{ secrets.secrets.SERVICE_ACCOUNT_KEY }}" | base64 -d > service-account-key.json
+        echo -n "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 -d > service-account-key.json
     - uses: azure/docker-login@v1
       with:
         login-server: jerensl.azurecr.io
