--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         PORT: ${{ secrets.PORT }}
         HTTP_ADDR: ${{ secrets.HTTP_ADDR }}
         SQLITE_DB: ${{ secrets.SQLITE_DB }}
-        SERVICE_ACCOUNT_FILE: ${{ secrets.SERVICE_ACCOUNT_FILE }}
+        SERVICE_ACCOUNT_STRING: ${{ secrets.SERVICE_ACCOUNT_STRING }}
         GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
         CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
         API_KEY: ${{ secrets.API_KEY }}
