--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
         API_KEY: ${{ secrets.API_KEY }}
       working-directory: ./internal
-      run: go test ./... -race -coverprofile=../coverage.out -covermode=atomic
+      
+      run: go test ./... -coverprofile=../coverage.out -covermode=atomic
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
