--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t jerensl.azurecr.io/jerens-web-api:${{ github.sha }}
+        docker build . -t jerensl.azurecr.io/jerens-web-api:${{ github.sha }} --build-arg SERVICE_ACCOUNT_STRING=${{ SERVICE_ACCOUNT_STRING }}
         docker push jerensl.azurecr.io/jerens-web-api:${{ github.sha }}   
 
   deploy:
