fix: fix service account

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,13 +16,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: microsoft/variable-substitution@v1 
+    with:
+        files: 'service-account.json'
+    env:
+        project_id: ${{ secrets.PROJECT_ID }}
+        private_key: ${{ secrets.PRIVATE_KEY }}
+        private_key_id: ${{ secrets.PRIVATE_KEY_ID }}
+        client_email: ${{ secrets.CLIENT_EMAIL }}
+        client_id: ${{ secrets.CLIENT_ID }}
+        client_x509_cert_url: ${{ secrets.CLIENT_X509_CERT_URL }}
     - uses: azure/docker-login@v1
       with:
         login-server: jerensl.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t jerensl.azurecr.io/jerens-web-api:${{ github.sha }} --build-arg SERVICE_ACCOUNT_STRING=${{ SERVICE_ACCOUNT_STRING }}
+        docker build . -t jerensl.azurecr.io/jerens-web-api:${{ github.sha }}
         docker push jerensl.azurecr.io/jerens-web-api:${{ github.sha }}   
 
   deploy:
