--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         PORT: ${{ secrets.PORT }}
         HTTP_ADDR: ${{ secrets.HTTP_ADDR }}
         SQLITE_DB: ${{ secrets.SQLITE_DB }}
+        PROJECT_ID: ${{ secrets.PROJECT_ID }}
         SERVICE_ACCOUNT_FILE: ${{ secrets.SERVICE_ACCOUNT_FILE }}
         CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
         API_KEY: ${{ secrets.API_KEY }}
