--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,12 @@
 name: Build & Deploy
 
 on:
-  pull_request:
-      branches:
+  push:
+    branches:
       - main
-      types: [opened, synchronize, reopened, closed]
 
 jobs:
   build:
-    if: github.repository == 'jerensl/api.jerenslensun.com' && (github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed'))
     runs-on: ubuntu-latest
 
     steps:
@@ -35,7 +33,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
