--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=5000
 HTTP_ADDR='localhost:5000'
 SQLITE_DB='../../database/db.test.sqlite'
 LOCAL_ENV=true
-GCP_PROJECT=''
+PROJECT_ID=''
 CORS_ALLOWED_ORIGINS='https://jerenslensun.com'
 API_KEY=''
 LOG_LEVEL='debug'
