docs: adding docs for stats notification

--- a/api/openapi/notification.yml
+++ b/api/openapi/notification.yml
@@ -91,7 +91,7 @@ paths:
       operationId: subscriberStats
       responses:
         '200':
-          description: todo
+          description: subsriber stat response
           content:
             application/json:
               schema:
