--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+# vendor/ 
 
 # Sqlite db
 /database/db*
@@ -29,4 +29,4 @@ test.env
 
 # vs code workspace
 *.code-workspace
-.vscode
+/.vscode/
