--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,21 +23,21 @@ jobs:
           client_x509_cert_url: ${{ secrets.CLIENT_X509_CERT_URL }}
     - uses: azure/docker-login@v1
       with:
-        login-server: jerensl.azurecr.io
+        login-server: crpersonalprod001.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t jerensl.azurecr.io/jerens-web-api:${{ github.sha }} -f docker/app-prod/Dockerfile
-        docker push jerensl.azurecr.io/jerens-web-api:${{ github.sha }}
+        docker build . -t crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }} -f docker/app-prod/Dockerfile
+        docker push crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'jerens-web-api'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'jerensl.azurecr.io/jerens-web-api:${{ github.sha }}'
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Deploy to Azure Web App
+  #       id: deploy-to-webapp
+  #       uses: azure/webapps-deploy@v2
+  #       with:
+  #         app-name: 'jerens-web-api'
+  #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+  #         images: 'crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}'
