--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,14 +30,14 @@ jobs:
         docker build . -t crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }} -f docker/app-prod/Dockerfile
         docker push crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Deploy to Azure Web App
-  #       id: deploy-to-webapp
-  #       uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'jerens-web-api'
-  #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-  #         images: 'crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}'
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'jerens-web-api'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: 'crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}'
