--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,6 +38,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'jerens-web-api'
+          app-name: 'app-personalwebapi-prod-001'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}'
