--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           app-name: 'app-personalwebapi-prod-001'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'crpersonalprod001.azurecr.io/jerens-web-api:${{ github.sha }}'
+          images: 'crpersonalapp.azurecr.io/jerens-web-api:${{ github.sha }}'
