--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,10 +10,19 @@ updates:
     directory: "/internal" # Location of package manifests
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 3
   - package-ecosystem: "gomod" # See documentation for possible values
     vendor: true
     directory: "/tools/c4" # Location of package manifests
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 3
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 3
+  - package-ecosystem: docker
+    directory: /
+    schedule:
+      interval: weekly
